set_source_files_properties(${PRECOMPILED_CC_PATH} PROPERTIES GENERATED TRUE)
add_library(runner runner.cpp result_formatting.cpp ${PRECOMPILED_CC_PATH})
llvm_update_compile_flags(runner)
target_link_libraries(runner PRIVATE ${LIBS} MLIRSQLFrontend PUBLIC arrow_shared pg_query::pg_query )
add_dependencies(runner precompiled)
if (COMPILE_FOR_PERF)
    target_compile_definitions(runner PRIVATE RUN_QUERIES_WITH_PERF=1)
else ()
    target_compile_definitions(runner PRIVATE RUN_QUERIES_WITH_PERF=0)
endif (COMPILE_FOR_PERF)